Preuve : sérialisation des messages du jeu réutilisable côté serveur (sans libGDX)
- MessageFactory.getInstance() et new BootData() se chargent sans libGDX.
- server/smoke/MessageRoundTrip : BootData.writeAll -> MessageFactory.readMessage
  round-trip OK (serverTime/flags/loginEvent préservés), fullName=BootData1.
- run.sh compile+exécute les deux smoke tests (codec + sérialisation).
- Toute la pile serveur (codec Deflate+XOR + sérialisation) validée avec les vraies
  classes du jeu -> le serveur décodera ClientInfo1 et répondra BootData1 au format
  wire exact, sans réimplémentation.
- docs/PROTOCOL.md §2bis + MEMORY/JOURNAL mis à jour.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8YZTb9Pz94YMCoQpe5N13